WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160868
Placeholder does not show the first time going into picture-in-picture on video without controls
https://bugs.webkit.org/show_bug.cgi?id=160868
Summary
Placeholder does not show the first time going into picture-in-picture on vid...
Ada Chan
Reported
2016-08-15 15:12:45 PDT
If you have HTML like the following: <video id="test-video" src="..." autoplay></video> <p><button onclick="document.getElementById('test-video').webkitSetPresentationMode('picture-in-picture')">Picture-in-picture</button></p> The first time you click the button to go into picture-in-picture, the placeholder does not show. But it shows if you try it the second time.
Attachments
Patch
(12.67 KB, patch)
2016-08-15 15:33 PDT
,
Ada Chan
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2016-08-15 15:13:15 PDT
<
rdar://problem/27804007
>
Ada Chan
Comment 2
2016-08-15 15:33:51 PDT
Created
attachment 286098
[details]
Patch
Eric Carlson
Comment 3
2016-08-16 08:11:41 PDT
Comment on
attachment 286098
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=286098&action=review
> LayoutTests/media/controls/pip-placeholder-without-video-controls.html:7 > + var maxAttemptsToTestPlaceholderVisibility = 100;
Nit: this seems excessive, it means the tests won't fail for 3.3 seconds. I think that we will have a problem if it takes more than a few retries, but maybe 10 is OK too allow for slow bots.
Ada Chan
Comment 4
2016-08-16 15:48:00 PDT
I used 10 as the max retry count for a similar test before but Alexey suggested bumping it to 10 seconds which I thought was a bit excessive, so in this test I increased the number to 100. But thinking about this more, 10 should probably be sufficient because it shouldn't take that long for the layer to be moved. Changing it to 10. Thanks for the review!
Ada Chan
Comment 5
2016-08-16 15:51:47 PDT
Committed:
http://trac.webkit.org/changeset/204534
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug